{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 392,
  "lineage": "74c722fa-76d8-5e87-08bd-eaf8af3f11ae",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:security-group/sg-0502d2e49d972ea19",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0502d2e49d972ea19",
            "ingress": [],
            "name": "eks-devops-senior-cluster-a4be51a59310f087bdc9da59a6",
            "name_prefix": "eks-devops-senior-cluster-",
            "owner_id": "508703379734",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-cluster",
              "Project": "eks-devops-senior",
              "karpenter.sh/discovery": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-cluster",
              "Project": "eks-devops-senior",
              "karpenter.sh/discovery": "eks-devops-senior"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "sg-0502d2e49d972ea19",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:security-group/sg-09900e6b9a445e37c",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-09900e6b9a445e37c",
            "ingress": [],
            "name": "eks-devops-senior-node-fa9dd1d969c7831b373119d699",
            "name_prefix": "eks-devops-senior-node-",
            "owner_id": "508703379734",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-node",
              "Project": "eks-devops-senior",
              "karpenter.sh/discovery": "eks-devops-senior",
              "kubernetes.io/cluster/eks-devops-senior": "owned"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-node",
              "Project": "eks-devops-senior",
              "karpenter.sh/discovery": "eks-devops-senior",
              "kubernetes.io/cluster/eks-devops-senior": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "sg-09900e6b9a445e37c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4012921182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0502d2e49d972ea19",
            "security_group_rule_id": "sgr-06c23b0154599c0ed",
            "self": false,
            "source_security_group_id": "sg-09900e6b9a445e37c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1912029681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-0ad8f88d7c395e220",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-3647224631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-0bb94a5034266d8b5",
            "self": false,
            "source_security_group_id": "sg-0502d2e49d972ea19",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3519565038",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-000bd90b191af1465",
            "self": false,
            "source_security_group_id": "sg-0502d2e49d972ea19",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-717401433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-01bb258be6d450fc5",
            "self": false,
            "source_security_group_id": "sg-0502d2e49d972ea19",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3816868559",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-068478bd36aa43eeb",
            "self": false,
            "source_security_group_id": "sg-0502d2e49d972ea19",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4041012974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-0eb307572c613be1c",
            "self": false,
            "source_security_group_id": "sg-0502d2e49d972ea19",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2491270437",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-093c8de93552a5431",
            "self": false,
            "source_security_group_id": "sg-0502d2e49d972ea19",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3979176780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-04c3c5f5806a6574f",
            "self": false,
            "source_security_group_id": "sg-0502d2e49d972ea19",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-668436208",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-0208432d67c886f62",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3754731852",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-0e91eef536cf0597c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2073234083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "us-east-1",
            "security_group_id": "sg-09900e6b9a445e37c",
            "security_group_rule_id": "sgr-00455094b60ed1960",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:network-acl/acl-0acfbda48d70edf51",
            "default_network_acl_id": "acl-0acfbda48d70edf51",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0acfbda48d70edf51",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "508703379734",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-003cc77765520ed07",
              "subnet-01d48e5e638cbeeba",
              "subnet-04e2e21b000a884a1",
              "subnet-072a94c401946eeaa"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-default",
              "Project": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-default",
              "Project": "eks-devops-senior"
            },
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:route-table/rtb-0fd477ca145cd51d0",
            "default_route_table_id": "rtb-0fd477ca145cd51d0",
            "id": "rtb-0fd477ca145cd51d0",
            "owner_id": "508703379734",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-default",
              "Project": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-default",
              "Project": "eks-devops-senior"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:security-group/sg-0c8e02fa30fa01244",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c8e02fa30fa01244",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "508703379734",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-default",
              "Project": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-default",
              "Project": "eks-devops-senior"
            },
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09815cbb608b89679",
            "arn": "arn:aws:ec2:us-east-1:508703379734:elastic-ip/eipalloc-09815cbb608b89679",
            "domain": "vpc",
            "id": "eipalloc-09815cbb608b89679",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-173-41-145.compute-1.amazonaws.com",
            "public_ip": "54.173.41.145",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-us-east-1a",
              "Project": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-us-east-1a",
              "Project": "eks-devops-senior"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "eipalloc-09815cbb608b89679",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:internet-gateway/igw-050e600c4e14dcf59",
            "id": "igw-050e600c4e14dcf59",
            "owner_id": "508703379734",
            "region": "us-east-1",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior",
              "Project": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior",
              "Project": "eks-devops-senior"
            },
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "igw-050e600c4e14dcf59",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09815cbb608b89679",
            "association_id": "eipassoc-0113580907ebaa391",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04174b063fb3d8ea3",
            "network_interface_id": "eni-02ed653a508ae6fc3",
            "private_ip": "10.20.101.4",
            "public_ip": "54.173.41.145",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e2e21b000a884a1",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-us-east-1a",
              "Project": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-us-east-1a",
              "Project": "eks-devops-senior"
            },
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "nat-04174b063fb3d8ea3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06d706df3a2ff14371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04174b063fb3d8ea3",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-06d706df3a2ff1437",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-06d706df3a2ff1437"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-050e600c4e14dcf59",
            "id": "r-rtb-0486ccf14d93de1931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0486ccf14d93de193",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0486ccf14d93de193"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:route-table/rtb-06d706df3a2ff1437",
            "id": "rtb-06d706df3a2ff1437",
            "owner_id": "508703379734",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-private",
              "Project": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-private",
              "Project": "eks-devops-senior"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "rtb-06d706df3a2ff1437",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:route-table/rtb-0486ccf14d93de193",
            "id": "rtb-0486ccf14d93de193",
            "owner_id": "508703379734",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-public",
              "Project": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-public",
              "Project": "eks-devops-senior"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "rtb-0486ccf14d93de193",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecf5c1382263fca9",
            "region": "us-east-1",
            "route_table_id": "rtb-06d706df3a2ff1437",
            "subnet_id": "subnet-01d48e5e638cbeeba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "rtbassoc-0ecf5c1382263fca9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06db7f587ea26415f",
            "region": "us-east-1",
            "route_table_id": "rtb-06d706df3a2ff1437",
            "subnet_id": "subnet-003cc77765520ed07"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "rtbassoc-06db7f587ea26415f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7935e3a79e30b3e",
            "region": "us-east-1",
            "route_table_id": "rtb-0486ccf14d93de193",
            "subnet_id": "subnet-04e2e21b000a884a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "rtbassoc-0e7935e3a79e30b3e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df4eba30cf2bfaca",
            "region": "us-east-1",
            "route_table_id": "rtb-0486ccf14d93de193",
            "subnet_id": "subnet-072a94c401946eeaa"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "rtbassoc-0df4eba30cf2bfaca",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:subnet/subnet-01d48e5e638cbeeba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d48e5e638cbeeba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508703379734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-private-us-east-1a",
              "Project": "eks-devops-senior",
              "karpenter.sh/discovery": "eks-devops-senior",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-private-us-east-1a",
              "Project": "eks-devops-senior",
              "karpenter.sh/discovery": "eks-devops-senior",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "subnet-01d48e5e638cbeeba",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:subnet/subnet-003cc77765520ed07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003cc77765520ed07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508703379734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-private-us-east-1b",
              "Project": "eks-devops-senior",
              "karpenter.sh/discovery": "eks-devops-senior",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-private-us-east-1b",
              "Project": "eks-devops-senior",
              "karpenter.sh/discovery": "eks-devops-senior",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "subnet-003cc77765520ed07",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:subnet/subnet-04e2e21b000a884a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e2e21b000a884a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508703379734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-public-us-east-1a",
              "Project": "eks-devops-senior",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-public-us-east-1a",
              "Project": "eks-devops-senior",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "subnet-04e2e21b000a884a1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:subnet/subnet-072a94c401946eeaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072a94c401946eeaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508703379734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-public-us-east-1b",
              "Project": "eks-devops-senior",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior-public-us-east-1b",
              "Project": "eks-devops-senior",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ea751425c0065bcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "subnet-072a94c401946eeaa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508703379734:vpc/vpc-0ea751425c0065bcf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0acfbda48d70edf51",
            "default_route_table_id": "rtb-0fd477ca145cd51d0",
            "default_security_group_id": "sg-0c8e02fa30fa01244",
            "dhcp_options_id": "dopt-0284252d8d0307987",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea751425c0065bcf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd477ca145cd51d0",
            "owner_id": "508703379734",
            "region": "us-east-1",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior",
              "Project": "eks-devops-senior"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "eks-devops-senior",
              "Project": "eks-devops-senior"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508703379734",
            "id": "vpc-0ea751425c0065bcf",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}